--- a/Spletna aplikacija/izdelki.html
+++ b/Spletna aplikacija/izdelki.html
@@ -54,60 +54,61 @@
   </div>
 </nav>
 
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-danger">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-success">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-  </div>
-</div><br>
 
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-  </div>
-</div><br><br>
 
-<footer class="container-fluid text-center">
-</footer>
+
+<div class="container-fluid">
+  <div class="row content">
+    <div class="col-sm-3 sidenav">
+      <h4>Operacije</h4>
+      <ul class="nav nav-pills nav-stacked">
+
+        <li><a href="#section2">Dodaj izdelek</a></li>
+        <li><a href="#section3">Spremeni ceno</a></li>
+
+      </ul><br>
+
+    </div>
+
+    <div class="col-sm-9">
+
+
+
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Ime izdelka</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Vnesi ime izdelka">
+  </div>
+
+
+  <div class="form-group">
+    <label for="exampleInputEmail1">Zaloga</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Vnesi količino, npr: 30">
+  </div>
+
+
+  <div class="form-group">
+    <label for="exampleSelect1">Tip</label>
+    <select class="form-control" id="exampleSelect1">
+      <option>Tip izdelka ni izbran</option>
+      <option>Topli napitek</option>
+      <option>Brezalkoholna pijača</option>
+      <option>Alkoholna pijača</option>
+      <option>Hrana</option>
+      <option>Tobak in ostalo</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label for="exampleInputEmail1">Cena</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Vnesi ceno npr: 1.8">
+  </div>
+
+
+  <button type="submit" class="btn btn-primary">Potrdi</button>
+</form>
+  </div>
+
 
 </body>
 </html>
